Security: Remove hardcoded AWS certificate ARN
- Removed hardcoded certificate ARN with AWS account ID
- Changed default to empty string (users must provide their own)
- Added clarification that certificate must be in us-east-1 for CloudFront

Critical fix before making repository public.

--- a/cloudformation/word-addin-hosting.yaml
+++ b/cloudformation/word-addin-hosting.yaml
@@ -9,8 +9,8 @@ Parameters:
   
   CertificateArn:
     Type: String
-    Description: ARN of the ACM certificate for the domain
-    Default: arn:aws:acm:us-east-1:528757814377:certificate/f2dd3447-25e5-4afa-a439-ad53a6089f0f
+    Description: ARN of the ACM certificate for the domain (must be in us-east-1 for CloudFront)
+    Default: ""
   
   DeploymentId:
     Type: String
